--- a/site/src/app.html
+++ b/site/src/app.html
@@ -9,6 +9,7 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Roboto+Slab:wght@100..900&display=swap"
 		rel="stylesheet" />
+    <link rel="icon" type="image/svg" href="favicon.svg">
 	%sveltekit.head%
 </head>
 
